--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.6.5",
     "mutationobserver-shim": "^0.3.7",
     "socket.io-client": "^4.2.0",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
